fixed z-index and layout problems

--- a/fashiongram/src/main/resources/static/css/nav.css
+++ b/fashiongram/src/main/resources/static/css/nav.css
@@ -49,26 +49,34 @@
 	font-family: 'Raleway', sans-serif;
 	width: 220px;
 	color: white;
-
 	transform: translateY(-14px);
 	font-size: 15px;
-	margin-bottom:15px;
+	margin-bottom: 15px;
 }
-.searchResult{
+
+.searchResult {
+	border: 1px solid black;
 	background-color: #252525;
+	-webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.85);
+	-moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.85);
+	box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.85);
+	position:relative;
+		z-index:1000;
 }
-.searchName{
-	display:block;
-	position:absolute;
+
+.searchName {
+	display: block;
+	position: absolute;
 	transform: translateY(-37px);
-	margin-left:70px;
+	margin-left: 70px;
 }
+
 .searchAvatar {
 	border-radius: 50%;
 	object-position: 50% 10%;
 	object-fit: cover;
 	height: 40px;
 	width: 40px;
-	margin:5px;
-	margin-left:15px;
+	margin: 5px;
+	margin-left: 15px;
 }
